# cuda_kernal

./: CMakeLists.txt  run.sh
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: test.1588959274080.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: test.sc
.metadata/.plugins/org.eclipse.core.resources/.projects/test/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.majid-lenovo-ideapad-320-15ikb_8388615/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.majid-lenovo-ideapad-320-15ikb_8388615/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.majid-lenovo-ideapad-320-15ikb_8388615/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.majid-lenovo-ideapad-320-15ikb_8388615/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/: kernal.cu
